--- a/index.html
+++ b/index.html
@@ -12,60 +12,42 @@
 <body>
     <div class="container">
         <h1>Calculator</h1>
-        <form id="add">
+        <form id="calculator">
           <div class="form-group">
-            <label for="add1">1st number:</label>
-            <input id="add1" class="form-control" type="text">
+            <label for="input1">1st number:</label>
+            <input id="input1" class="form-control" type="text">
           </div>
           <div class="form-group">
-            <label for="add2">2nd number:</label>
-            <input id="add2" class="form-control" type="text">
+            <label for="input2">2nd number:</label>
+            <input id="input2" class="form-control" type="text">
           </div>
-          <button type="submit" class="btn">Add!</button>
+          <div class="radio">
+            <label>
+              <input type="radio" name="operator" value="add" checked>
+              add
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="operator" value="subtract">
+              subtract
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="operator" value="multiply">
+              multiply
+            </label>
+          </div>        
+          <div class="radio">
+            <label>
+              <input type="radio" name="operator" value="divide">
+              divide
+            </label>
+          </div>        
+          <button type="submit" class="btn">Go!</button>
         </form>
-        <div id="add-output">
-
-        </div>
-        <form id="sub">
-          <div class="form-group">
-            <label for="sub1">1st number:</label>
-            <input id="sub1" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="sub2">2nd number:</label>
-            <input id="sub2" class="form-control" type="text">
-          </div>
-          <button type="submit" class="btn">Substract!</button>
-        </form>
-        <div id="sub-output">
-
-        </div>
-        <form id="mult">
-          <div class="form-group">
-            <label for="mult1">1st number:</label>
-            <input id="mult1" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="mult2">2nd number:</label>
-            <input id="mult2" class="form-control" type="text">
-          </div>
-          <button type="submit" class="btn">Multiply!</button>
-        </form>
-        <div id="mult-output">
-
-        </div>
-        <form id="div">
-          <div class="form-group">
-            <label for="div1">1st number:</label>
-            <input id="div1" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="div2">2nd number:</label>
-            <input id="div2" class="form-control" type="text">
-          </div>
-          <button type="submit" class="btn">Divide!</button>
-        </form>
-        <div id="div-output">
+        <div id="output">
 
         </div>
       </div>
